# opensvg

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: 01-tech-stack-research.md  02-architecture.md  03-implementation-tasks.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/core/: color.rs  mod.rs  optimizer.rs  parser.rs  rasterizer.rs
src/styles/: main.css
