[package]
name = "opensvg"
version = "0.2.0"
description = "A simple SVG editor"
authors = [""]
edition = "2021"

[lib]
name = "opensvg_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }

# SVG processing
quick-xml = "0.37"
csscolorparser = { version = "0.7", features = ["serde"] }

# SVG rasterization and image output
resvg = "0.44"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Error handling
thiserror = "2"
